Fix scrolling issue on Firefox

--- a/src/less/viewer.less
+++ b/src/less/viewer.less
@@ -23,15 +23,15 @@
   .center-column {
     display: flex;
     flex-direction: column;
+    margin: @gutter;
     flex: 1;
     overflow: hidden; // Necessary when the pivot-table is too big so it can scroll
     .top-row {
-      margin: @gutter;
       margin-bottom: 0;
+      margin-bottom: @gutter;
     }
     .bottom-row {
       height: 100%;
-      margin: @gutter;
     }
   }
 
